# src/api/src/routers/trade.ts
@@ -1,0 +1,18 @@
+import router from "express";
+
+const routers = router.Router();
+
+routers.get("/:address");
+routers.post("/");
+routers.get("/holder/:address");
+routers.get("/watchlist/:address");
+routers.get("/all/:address");
+routers.get("/all/:address");
+routers.get("/latest");
+routers.get("/");
+routers.get("/");
+routers.get("/");
+routers.get("/");
+routers.get("/");
+
+export default routers;
