# src/api/src/routers/user.ts
@@ -1,0 +1,14 @@
+import router from "express";
+
+const routers = router.Router();
+
+routers.post("/");
+routers.get("/:address");
+routers.put("/:address");
+routers.get("/watchlists/:address");
+routers.put("/watchlist");
+routers.put("/notification");
+routers.get("/search/:keyword");
+routers.get("/top-price-users");
+
+export default routers;
